# glfwTemplate

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  fragmentShader.glsl  glfw.conf  main.cpp  readfile.cpp  shader.cpp  shader.h
resources/: fragmentShader.glsl  vertexShader-transform.glsl
